[package]
name = "eliecs"
version = "0.1.0"
edition = "2021"

[dependencies]
eliecs_macros = { path = "../eliecs_macros" }
serde = "1.0.217"

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "0.4", features = ["html_reports"] }
lz4_flex = "0.11.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[[bench]]
name = "pools"
harness = false
