[package]
name = "eliecs"
version = "0.1.0"
edition = "2021"

[dependencies]
eliecs_macros = { path = "../eliecs_macros" }
serde = { version = "^1", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "0.4", features = ["html_reports"] }
serde_json = "1.0.138"

[[bench]]
name = "pools"
harness = false
