[package]
name = "eliecs_macros"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
proc-macro = true


[dependencies]
heck = "^0.5"
proc-macro-error = "^1"
proc-macro2 = "^1"
quote = "^1"
syn = { version = "^2", default-features = false, features = [
	"parsing",
	"full",
	"proc-macro",
] }
